src/objects/Compliance_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactType__c</fullName>
        <label>ContactType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFM_Code__c</fullName>
        <label>DFM Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIMType__c</fullName>
        <label>EIMType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exporter_TPID__c</fullName>
        <label>Exporter TPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exporter_TPName__c</fullName>
        <label>Exporter TPName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightChargesFor__c</fullName>
        <label>FreightChargesFor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightPrepaidCollect__c</fullName>
        <label>FreightPrepaidCollect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSCode__c</fullName>
        <label>HSCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Integration_Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Integration Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineQuantityUnit__c</fullName>
        <label>LineQuantityUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Transport_Code__c</fullName>
        <label>Mode of Transport Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginCountry__c</fullName>
        <label>OriginCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginState__c</fullName>
        <label>OriginState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_Loading__c</fullName>
        <label>Place of Loading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortofExit__c</fullName>
        <label>PortofExit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonForExport__c</fullName>
        <label>ReasonForExport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipFrom_TPID__c</fullName>
        <label>ShipFrom TPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipFrom_TPName__c</fullName>
        <label>ShipFrom TPName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentCurrency__c</fullName>
        <label>ShipmentCurrency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Line_Unit_Price_Currency__c</fullName>
        <label>Shipment Line Unit Price Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status_Action__c</fullName>
        <label>Shipment Status Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Singed_by__c</fullName>
        <label>Singed by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmissionEnvironment__c</fullName>
        <label>SubmissionEnvironment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_File_Action__c</fullName>
        <label>Upload File Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Compliance Configuration</label>
</CustomObject>